@@ -1,19 +1,9 @@
 DIST ecj-4.3.jar 1377431 RMD160 48fa985f763838bed750aa64a2fa997734438099 SHA1 da254944309a8387aa39323fe7bb7216a4518311 SHA256 9de193ea393ed50d868b730bad6916f7a8ef4ba80216f8606d3e1a0dd886e74b
-DIST gcc-4.4.3-patches-1.2.tar.bz2 12802 RMD160 4fed8dfde025fb397c29d11359c6583c40c8e217 SHA1 226ae5c9e177ac18b2a0f76c84233b33707f619b SHA256 d59016edf9c0d1f7158928ac5c29196af96ed34de17f9b0cefb5087faed3d6db
-DIST gcc-4.4.3-piepatches-v0.4.5.tar.bz2 16946 RMD160 a0df02c15ab5436cb270f1b41227b5722dcfcc53 SHA1 355d1fa866e7bde03191d0416b3524696e0c98c6 SHA256 ac853b06d4189dfba1bf72c8565d9ebf893b83cb690377db947cf5a48c802dc4
 DIST gcc-4.4.3-specs-0.2.0.tar.bz2 2004 RMD160 0a013f95029a170eeea3cb6ccbfd65f64b66f465 SHA1 61bd3c13400772ec4d5d4fcee297e3d86adbd065 SHA256 f6c7cb99beead66dd4d06f7004c5731a9360330cbe878ce79792c618e008eed2
-DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
-DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
-DIST gcc-4.4.4-patches-1.0.tar.bz2 16573 RMD160 b36bb4074b25a09efda5466d296c0b3a5327bbcc SHA1 7cb7d9b2f8a6a46992e83aad4b967b150d01fbf2 SHA256 0fc84cba653ebb2638b1b6668e80fdf8d835e47fbe6a44fa53905706f3a83164
-DIST gcc-4.4.4-piepatches-v0.4.5.tar.bz2 16987 RMD160 8fda3d41b47b7c5679e2935e0380f8582b6b7591 SHA1 971203b908eb32875163386ca97e6ff94291323f SHA256 78fa1ecf4cd9abe45a68cdfad4cbd1ad92acde0c4e7ca4dd8403f7e5bd41c0cd
-DIST gcc-4.4.4-uclibc-patches-1.0.tar.bz2 3014 RMD160 f849627745442bd3885dc7892aac0b22a5b6397c SHA1 6807f546676ac608100eb0de5b67e42af90b6d4c SHA256 40bfd13b132567dca198d815a602d2cfb49046a22425450eb3db67ed280feaea
-DIST gcc-4.4.4.tar.bz2 63018867 RMD160 b41f26be28cc1ef643135230dfa94876d8a02dd6 SHA1 45d1e7242a08cbb7a343ed2bf640a5afd0ebe098 SHA256 e1c13696b45752ad3f652304fab5120a43a8a5c0f438d3bda78cf16b620c0c58
 DIST gcc-4.5.0-patches-1.1.tar.bz2 6938 RMD160 b4f18fad10f44c44d1ca184254298261c2521caa SHA1 a80f0e65ae0d8045ba93a71f6082889b09347157 SHA256 fb83b1ff1634f78f6e14e16775e0f67e1e1c5ede114af83c1baf9640b477147a
 DIST gcc-4.5.0-piepatches-v0.4.5.tar.bz2 14281 RMD160 ec9f3026b33e41f4297f390680c12b8debd5a426 SHA1 424837fbff9bef1a966b9df67662f372b4a488d4 SHA256 8526a33a4080b892dfefcb764062f6755da909034c05556f68acaa2b4a15a631
 DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
-EBUILD gcc-4.4.3-r6.ebuild 2434 RMD160 0acd52391b334a8270dac1c6641f5918245c54a0 SHA1 fafc914c81dabf58fa7a28e4edd81cd0861f1451 SHA256 0a51332c71bc55ffaca5968530a55433e29c202fb6fddebd7bf36d993ad9f24e
-EBUILD gcc-4.4.4-r3.ebuild 2457 RMD160 8f593f739130c2482bae4d24b141d94a9ea3a833 SHA1 68ef664a0d92bb78fd175917136a1bf137807a60 SHA256 9a311c1284795727e6ce8e555b2a9236b444ca5f91b5a5157fff46cb29c145ef
 EBUILD gcc-4.5.0-r3.ebuild 2244 RMD160 73fed3e6c5a3a89556d1b4bfe5889574777daef5 SHA1 ef9401b9fd3690095a16a3561773fef9384d97b8 SHA256 4ee35e14a450682648d410fcfe7b41286ca57690e9c1a34fcef1164232b404de
-MISC ChangeLog 3537 RMD160 9b427f85e8195ef68d6e9bb83ec806eaf26c8ad8 SHA1 94be306a4fd7f45adb12257e0a6a4ca30ca4838b SHA256 a1647435a9db5d32d41bc9d937c78671500109d342b8caa3669bb0b87f294295
+MISC ChangeLog 3683 RMD160 02d156e2f90476ae192b0ea197a06cd22c679a22 SHA1 d160f0c52b1c95c317ab36cef0ed843ec19ffef4 SHA256 c173844e38d794f526c0dee09d6023e1cbd37bf4612eab379b7f5baaa9c98ae4
 MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
