@@ -1,88 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.4.3-r2.ebuild,v 1.2 2010/04/27 02:33:26 dirtyepic Exp $
-
-PATCH_VER="1.2"
-UCLIBC_VER="1.0"
-
-ETYPE="gcc-compiler"
-GCC_FILESDIR="${PORTDIR}/sys-devel/gcc/files"
-
-# Hardened gcc 4 stuff
-PIE_VER="0.4.5"
-SPECS_VER="0.2.0"
-# arch/libc configurations known to be stable with {PIE,SSP}-by-default
-PIE_GLIBC_STABLE="x86 amd64 ppc ppc64 arm ia64"
-PIE_UCLIBC_STABLE="x86 amd64 arm pcc pcc64"
-SSP_STABLE="amd64 x86 ppc ppc64 arm"
-SSP_UCLIBC_STABLE=""
-#end Hardened stuff
-
-inherit toolchain
-
-DESCRIPTION="The GNU Compiler Collection.  Includes C/C++, java compilers, pie+ssp extensions, Haj Ten Brugge runtime bounds checking"
-
-LICENSE="GPL-3 LGPL-3 || ( GPL-3 libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.2"
-KEYWORDS="~alpha amd64 ~arm -hppa ~ia64 ~mips ~ppc ~ppc64 -sparc ~x86 ~x86-fbsd"
-
-RDEPEND=">=sys-libs/zlib-1.1.4
-	>=sys-devel/gcc-config-1.4
-	virtual/libiconv
-	>=dev-libs/gmp-4.2.1
-	>=dev-libs/mpfr-2.3.2
-	graphite? (
-		>=dev-libs/ppl-0.10
-		>=dev-libs/cloog-ppl-0.15.4
-	)
-	!build? (
-		gcj? (
-			gtk? (
-				x11-libs/libXt
-				x11-libs/libX11
-				x11-libs/libXtst
-				x11-proto/xproto
-				x11-proto/xextproto
-				>=x11-libs/gtk+-2.2
-				x11-libs/pango
-			)
-			>=media-libs/libart_lgpl-2.1
-			app-arch/zip
-			app-arch/unzip
-		)
-		>=sys-libs/ncurses-5.2-r2
-		nls? ( sys-devel/gettext )
-	)"
-DEPEND="${RDEPEND}
-	test? ( >=dev-util/dejagnu-1.4.4 >=sys-devel/autogen-5.5.4 )
-	>=sys-apps/texinfo-4.8
-	>=sys-devel/bison-1.875
-	elibc_glibc? ( >=sys-libs/glibc-2.8 )
-	amd64? ( multilib? ( gcj? ( app-emulation/emul-linux-x86-xlibs ) ) )
-	ppc? ( >=${CATEGORY}/binutils-2.17 )
-	ppc64? ( >=${CATEGORY}/binutils-2.17 )
-	>=${CATEGORY}/binutils-2.15.94"
-PDEPEND=">=sys-devel/gcc-config-1.4"
-if [[ ${CATEGORY} != cross-* ]] ; then
-	PDEPEND="${PDEPEND} elibc_glibc? ( >=sys-libs/glibc-2.8 )"
-fi
-
-src_unpack() {
-	gcc_src_unpack
-
-	use vanilla && return 0
-
-	sed -i 's/use_fixproto=yes/:/' gcc/config.gcc #PR33200
-
-	[[ ${CHOST} == ${CTARGET} ]] && epatch "${GCC_FILESDIR}"/gcc-spec-env.patch
-
-	[[ ${CTARGET} == *-softfloat-* ]] && epatch "${GCC_FILESDIR}"/4.4.0/gcc-4.4.0-softfloat.patch
-}
-
-pkg_setup() {
-	gcc_pkg_setup
-
-	if use graphite ; then
-		ewarn "Graphite support is still experimental and unstable."
-		ewarn "Any bugs resulting from the use of Graphite will not be fixed."
-	fi
-}
